# rust-samples

./: .gitignore  readme.md
an_crate_test/: Cargo.toml
an_crate_test/examples/: raw_pointer.rs  test.rs  test_codec.rs  tower_service_builder.rs
an_crate_test/src/: lib.rs
an_crate_test/src/codec/: mod.rs  packet_codec.rs  ws_codec.rs
anexampls/: Cargo.toml  README.md
anexampls/examples/: async_trait.rs  chat_room.rs  chat_room_2.rs  chat_server.rs  motore.rs  mutex.rs  my_service.rs  tower_service.rs  tower_tcp.rs
anexampls/macros/: Cargo.toml
anexampls/macros/src/: lib.rs  util.rs
anexampls/src/: lib.rs  main.rs  util.rs
anexampls/src/codec/: mod.rs  stream_codec.rs
anexampls/src/config/: mod.rs
anexampls/src/server/: connection.rs  mod.rs  tcp_server.rs
anexampls/src/server/framer/: mod.rs  tcp_framer.rs  tcp_lines_framer.rs  udp_framer.rs  ws_framer.rs
anexampls/src/service/: mod.rs  service_fn.rs
aweb-rocket/: Cargo.toml  REDME.md  app.yaml  index.html
aweb-rocket/src/: main.rs
aweb-rocket/src/config/: mod.rs  routes.rs
casbin-demo/: Cargo.toml  README.md  dev-test.session.sql
design-pattern/: README.md
dioxus-chain/: Cargo.toml  build.rs  index.css  output.css  readme.md  style.css
dioxus-chain/src/: app.rs  block.rs  chain.rs  lib.rs  main.rs  storage.rs
dioxus-live/: Cargo.toml  Dioxus.toml
dubbo-demo/: Cargo.toml  build.rs  dubbo.yaml  dubbo_echo.yaml
game-specs/: Cargo.toml
google-translator/: Cargo.toml  config.json  config.yaml  i18n.config.json  lang.json  lang.json.t.json  multiple.zh.json  single.json  tl.config.json
google-translator/.cargo/: config.toml
google-translator/config/: config_fish.json  config_fish.yaml  config_flb.json  config_flb.yaml
google-translator/examples/: file_to_json.rs
google-translator/src/: lang.rs  main.rs  multiple.rs  single.rs  translator.rs
hello/: Cargo.toml  Makefile  readme.md
hello-async/: Cargo.toml
hello-async/benches/: my_benchmark.rs
hello-async/examples/: event_manager.rs  futures.rs  futures_async.rs  futures_demo.rs  my_service.rs  pin_project.rs  task_manager.rs
hello-async/src/: main.rs  test_async.rs
hello-axum/: Cargo.toml
hello-axum-websocket/: Cargo.toml  readme.md
hello-axum-websocket/src/: main.rs  state.rs  test.rs
hello-axum-websocket/src/handler/: mod.rs  trace_layer.rs  ws.rs
hello-axum/src/: main.rs
hello-axum/src/middlewares/: auth.rs
hello-axum/src/routes/: mod.rs
hello-axum/src/routes/hello/: router.rs  service.rs
hello-axum/src/routes/hello/dtos/: create_hello_request.rs  create_hello_response.rs  delete_hello_response.rs  get_hello_response.rs  list_hello_response.rs  mod.rs  update_hello_request.rs  update_hello_response.rs
hello-axum/src/routes/hello/tests/: service.rs
hello-axum/src/routes/hello/vo/: hello.rs
hello-axum/src/routes/root/: router.rs
hello-gat/: Cargo.toml  README.md
hello-gat-rng/: 1.txt  2.txt  Cargo.toml
hello-log/: Cargo.toml
hello-log/config/: log4rs.yaml
hello-log/examples/: fast_log.rs  lern.rs  log4rs.rs  simplelog.rs  tracing.rs
hello-log/src/: main.rs
hello-log/src/config/: logging.rs
hello-macro/: Cargo.toml
hello-message-io/: Cargo.toml
hello-mp3/: Cargo.toml
hello-regex/: Cargo.toml
hello-reqwest/: Cargo.toml
hello-rocket/: Cargo.toml
hello-state/: Cargo.toml
hello-tarpc/: Cargo.toml  print.md
hello-tcp/: Cargo.toml
hello-tokio/: Cargo.toml
hello-tonic/: Cargo.toml  Makefile  build.rs
hello-tonic/examples/: echo_client.rs  echo_server.rs  etcd_test.rs  hello_client.rs  hello_client_blance.rs  hello_client_change.rs  hello_client_etcd.rs  hello_server.rs  hello_server_etcd.rs
hello-tonic/proto/: echo.proto
hello-tonic/src/: etcd_discovery.rs  etcd_register.rs  greeter.rs  lib.rs  my_channel.rs
hello-tonic/src/echo/: client.rs  server.rs
hello-tonic/src/proto/: echo.rs  grpc.examples.echo.rs
hello-ui-dioxus/: Cargo.toml  index.html
hello-ui-dioxus/assets/: app.css
hello-ui-dioxus/examples/: inlineprops.rs
hello-ui-dioxus/src/: main.rs
hello-ui-yew/: Cargo.toml
hello-ui-yew/src/: lib.rs  main.rs
hello-ui-yew/src/component/: counter.rs  hello.rs
hello-websocket/: Cargo.toml
http-proxy/: Cargo.toml  Makefile  README.md
http-proxy/src/: http_proxy.rs  main.rs
http_proxy/: Cargo.toml
http_proxy/src/: http_proxy.rs
ice-rs-demo/: Cargo.toml  Contact.ice  build.rs  config.client
ice-rs-demo/src/: main.rs
ice-rs-optional/: Cargo.toml  Contact.ice  build.rs  config.client
lists/: Cargo.toml
minigrep/: Makefile  (+1 more)
oso-live/: Cargo.toml
oso-live/examples/: base.rs  cw.rs
oso-live/rules/: app.polar
oso-live/src/: lib.rs
oso-live/src/models/: mod.rs  sys_permission.rs  sys_role.rs  sys_role_permission.rs  sys_user.rs  sys_user_role.rs  tests.rs
oso-live/src/services/: auth.rs  mod.rs  user.rs
oso-live/templates/: co_orm.tera  mysql_rbatis.json  rbatis.tera  readme.md  reverse.yml  sqlx.tera
oso-live/tests/: mysql.sql
rbatis-demo/: .env  Cargo.toml  stdout.yaml  table_mysql.sql
rbatis-demo/examples/: crud.rs
rbatis-demo/src/: lib.rs  main.rs  model.rs  test_batch.rs  tests.rs  user.rs
socks5/: Cargo.toml  README.md  config.yaml
socks5/src/: config.rs  main.rs  socket.rs  socket_async_std.rs  socket_smol.rs  socket_std.rs
socks5proxy/: Cargo.toml  README.md  app.yaml
socks5proxy/src/: config.rs  main copy.rs  main.rs  socket.rs
tiny-orm-demo/: Cargo.toml
tiny-orm-demo/src/: lib.rs  main.rs  model.rs  tests.rs
tower-tcp/: Cargo.toml
tower-tcp/examples/: asyn.rs  one.rs  timeout.rs  tower_fn.rs  yilai.rs
tower-tcp/src/: main.rs  message.rs  request.rs  router copy 2.rs  router copy.rs  router.rs  server.rs  service copy 2.rs  service copy.rs  service.rs  service_fn.rs  test_client.rs  timer.rs
volo-demo/: Cargo.toml  readme.md
volo-demo/idl/: volo_example.thrift
volo-demo/src/: layer.rs  lib.rs  main.rs
volo-demo/volo-gen/src/: lib.rs
volo-grpc/: Cargo.toml  readme.md
volo-grpc/src/: layer.rs  lib.rs  main.rs
volo-grpc/volo-gen/: Cargo.toml  volo.yml
volo-grpc/volo-gen/src/: lib.rs
(+162 files in other folders)
