[package]
name = "an_crate_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rclite="0.2.4"
trc = "1.2.1"
tower = "0.4.13"
tokio-util= {version= "0.7.8", features = ["codec"]}
bytes = "1"
futures="0.3.28"
tokio-tungstenite = {version = "0.20", optional = false}