[package]
name = "aweb"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
strip = true
# strip = "debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "0.5.0-rc.2"  } # features = ["json"]

#log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time","env-filter"] }
time = {version = "0.3",features = ["macros","local-offset"]}

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
#serde_any = { version = "0.5", default-features = false, features = ["yaml"] } # "toml"

