[package]
name = "dioxus-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = {version = "0.2",features = ["desktop"]}
dioxus-heroicons = "0.1"

chrono= {version = "*", features = ["serde"]}
sha2 = "0.10"
# base16ct = {version = "*", features = ["alloc"]}

serde = {version = "1", features = ["derive"]}
serde_json = "1"

console_error_panic_hook = "0.1"
# reqwest = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true

