[package]
name = "hello-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3", features = ["thread-pool"]}

#bench测试
criterion= "0.3"

tokio = { version = "1", features = ["full"] }

[[bench]]
name = "my_benchmark"
harness = false