[package]
name = "hello-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3", features = ["thread-pool"]}
# 异步任务组
awaitgroup = "0.7.0"
#bench测试
criterion= "0.5"

tokio = { version = "1", features = ["full"] }

rand = "0.8"
futures-timer = "3"

# 内存存储
dashmap = "5.4"
#并行
rayon = "1.7"

pin-project = "1"

[[bench]]
name = "my_benchmark"
harness = false