[package]
name = "hello-axum-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws","headers"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = {version="1", features = ["derive"]}
tower-http ={version = "*", features = ["trace"]}
# hyper ={ version = "*", features = ["full"]}
nats = "0.23.0"

dashmap = "*"

tracing = '0.1'
tracing-subscriber = '0.3'
# env_logger ="*"


[dev-dependencies]
url = '*'
tokio-tungstenite = '*'