[package]
name = "hello-axum"
version = "0.1.0"
authors = ["anonymous <foo@bar.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.48"
thiserror = "1.0.38"
tracing = "0.1.37"

[dependencies.axum]
features = []
version = "0.6.18"

[dependencies.serde]
features = ["derive"]
version = "1.0.105"

[dependencies.tokio]
features = ["full"]
version = "1.28.2"

[dependencies.tower-http]
features = ["cors", "trace"]
version = "0.4.4"
