[package]
name = "hello-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]] 
# name = "echo-server"
# path = "src/echo/server.rs"


[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version ="1", features = ["macros", "rt-multi-thread"] }

# stream
futures = "0.3"
tokio-stream="0.1"
h2 = "0.4"


tracing = "*"
tracing-subscriber = {version = "0.3", features = ["env-filter","local-time"]}

tower = "0.4"
flume = "0.11"
rand = "0.8"

ginepro="0.7"
anyhow="1"
etcd-client = "0.12"
async-recursion = "1"

[build-dependencies]
tonic-build = "0.11"