[package]
name = "hello-ui-dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = {version = "0.2", optional = true}
dioxus-html-macro = "0.2"
#wasm-logger = "0.2"
#wasm-bindgen = "0.2"
tracing = "*"
tracing-wasm = "*"
console_error_panic_hook = "*"

# 条件编译
[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[profile.release]
opt-level = 3
lto = true