[package]
name = "ui-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# client side "csr", server side "ssr"
yew = { version = "0.20", features = ["csr"] }
# yew-bootstrap = "0"

[profile.release]
lto = true
opt-level = 3