[package]
name = "hello-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.17"
tokio = {version="1", features=["full"]}
dashmap = "5"
log= "*"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
env_logger = "*"
url = "*"
futures-channel="0.3.25"