[package]
name = "http-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"]}
http-body-util = "0.1"
bytes = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
fern = {version = "0.7", features = []} # "date-based"
chrono = "0.4"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true

