[package]
name = "oso-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
oso = "0.27.3"
# sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio", "chrono", "rust_decimal"] }
# co-orm ={version = "0.3.9", features = ["mysql"]}

rust_decimal = "1.34"
# chrono ={version = "0.4.35", features = ["serde"]}
# bigdecimal ="0.4.3"
fastdate = "0.3.28"

rbatis = "4.5.21"
rbs = "4.5.13"
rbdc-mysql={version="4.5.5"}
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1", features = ["full"] }

log = "0.4.21"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

