[package]
name = "rbatis-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rbatis ={ version = "4"  } #features = ["debug_mode"]

rbdc-mysql={version = "0.1"}

#base types
once_cell = "1"
serde = { version = "1", features = ["derive"] }
#serde_json = "1"
rbs={version="0.1"}
fastdate = { version = "0.1"}
#bigdecimal = { version = "0.2.0", features = ["serde"] }

#log lib
log = "0.4"
fast_log = "1.5"

dotenv = "0.15"

