[package]
name = "socks5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# argparse = "0.2"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt","time"], default-features = false }
time = {version = "0.3"}

tokio = { version = "1", features = ["rt-multi-thread","net","macros","io-util"] }
# smol = "1.3"
# async-std = { version = "1" }

serde = { version = "1.0", features = ["derive"] }
# toml = "0.7"
serde_yaml = "0.9"


[profile.release]
opt-level = 3
lto = true
strip = true
