[package]
name = "socks5proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
# argparse = "0.2"

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt","time"], default-features = false }
time = {version = "0.3"}

tokio = { version = "1", features = ["rt-multi-thread","net","macros","io-util"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
