[package]
name = "volo-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["volo-gen"]

[dependencies]
tokio = { version = "1", features = ["full"] }
volo = "0.2" 
pilota = "0.2" 

lazy_static = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

volo-gen = {path = "volo-gen"}




[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
