[package]
name = "volo-grpc-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
volo = "0.8" 
volo-grpc = "0.8"
pilota = "0.9"

anyhow = "1"
futures = "0.3"


[workspace]
members = ["volo-gen"]
resolver = "2"


[dependencies]
volo-gen = { path = "volo-gen"}
volo.workspace = true
volo-grpc.workspace = true

anyhow.workspace = true
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"

lazy_static = "1"